Fixed slightly off-center and overflowing modals

--- a/app/assets/stylesheets/partials/dashboard/_core.sass
+++ b/app/assets/stylesheets/partials/dashboard/_core.sass
@@ -36,6 +36,7 @@ bikboo-shell.tree-dashboard
                 text-align: center
                 background: white
                 width: 485px
+                max-width: 90%
                 padding: 1rem
                 border-radius: 3px
                 border: solid 1px #dedddd
