--- a/app/assets/stylesheets/partials/dashboard/editor/_core.sass
+++ b/app/assets/stylesheets/partials/dashboard/editor/_core.sass
@@ -3,9 +3,10 @@ app-document-viewer .document .wrapper#editor
     height: 100%
     overflow: auto
     main.min-container
-        width: 90%
+        width: 95%
         max-width: none
         padding: 0
+        margin-right: 0
         app-project-viewer
             @import 'partials/dashboard/editor/overview'
             height: inherit
